--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
 <body>
   <div id="container">
     <div id="header">
-      <h1>Me, Myself, and My Creations</h1>
+      <h1>My Introduction</h1>
       <marquee scrollamount="3" behavior="alternate">A most warm and cordial welcome to my website. Delighted to have you here.• Best viewed in 800x600 resolution</marquee>
     </div>
     
